# zcssr

./: README.md  bootstrap
docs/: README.md  generating_gerbers_and_fab_outputs.md  placing_jlcpcb_order.md  project_log.md  setting_up_dev_env.md  todo.md
docs/img/: README.md
firmware/: Cargo.toml  bootstrap  build  debug  deploy_release  deploy_standalone  doc  memory.x  monitor_itm  openocd.cfg  openocd.gdb  release  stop_openocd  tmux_workspace  watch
firmware/src/: board.rs  lib.rs
firmware/src/board/: aliases.rs  clear_interrupt.rs  configure.rs  constants.rs  itm.rs  mod.rs  multi_pwm.rs  output.rs  pulse_ssr.rs
firmware/src/ui/: mod.rs  welder.rs
hardware/: custom.lib
hardware/Custom.pretty/: 11x2.54mm_Straight.kicad_mod  1x2.54mm_Straight.kicad_mod  2.4GHz-INVERTED-F-ANTENNA.kicad_mod  2x2.54mm_Straight.kicad_mod  3.5mm_LED.kicad_mod  6x2.54mm_Straight.kicad_mod  BAT-HLD-001-ND.kicad_mod  BK-18650-PC2.kicad_mod  BigPadTM.kicad_mod  Ceralock_Resonator_Murata.kicad_mod  DF61Y-2S-2.2C(13).kicad_mod  D_SOD-123FL.kicad_mod  ElecroSmallestVia.kicad_mod  GndBridge.kicad_mod  Harwin_Test_Point.kicad_mod  Inductor_1008.kicad_mod  Inductor_2020.kicad_mod  Inductor_5020.kicad_mod  Inductor_5050.kicad_mod  LED_0603.kicad_mod  LFXTAL056523.kicad_mod  LMR16006XDDCR.kicad_mod  LQFP-144_20x20mm_Pitch0.5mm.kicad_mod  MBR1H100SFT3G.kicad_mod  Molex_KK-6410-03_03x2.54mm_Straight.kicad_mod  NFC_antenna_5.882uH.kicad_mod  NX3215SA.kicad_mod  NetTie-2_THT_Pad0.3mm_front_copper_only.kicad_mod  OK-Fish.kicad_mod  OshParkTab.kicad_mod  PhoenixContact_MKDS_2-3.5.kicad_mod  PicoBlade_53261-0671 or 2.54.kicad_mod  PowerSolderPad.kicad_mod  Pushbutton_450-1642-ND.kicad_mod  QFN-48-1EP_7x7mm_P0.5mm_EP5.15x5.15mm_ThermalVias.kicad_mod  R_2512.kicad_mod  R_2512_with_sense.kicad_mod  Ragworm_TP.kicad_mod  SD53-150-R.kicad_mod  SMLP34RGB.kicad_mod  (+23 more)
hardware/zero_crossing_detector_surface_mount/: .gitignore  fp-lib-table  sym-lib-table  zero_crossing_detector-cache.lib  zero_crossing_detector.kicad_pcb  zero_crossing_detector.pro  zero_crossing_detector.sch
hardware/zero_crossing_detector_surface_mount/print/: .gitignore  rename_gbrs.sh
helper_macros/: Cargo.toml  watch
helper_macros/src/: lib.rs
