[package]
authors = [""]
edition = "2018"
readme = "README.md"
name = "zcssr"
version = "0.1.0"

[dependencies]
cortex-m              = "0.6.0"
cortex-m-rt           = "0.6.9"
cortex-m-rtfm         = "0.5.0"
stm32f1               = "0.8.0"
#stm32f1xx-hal         = { git = "https://github.com/stm32-rs/stm32f1xx-hal", features = ["stm32f103", "rt", "high"] }
stm32f1xx-hal         = { path = "../../stm32f1xx-hal", features = ["stm32f103", "rt", "high"] }
embedded-hal          = { version = "0.2.3", features = ["unproven"] }
serde                 = { version = "^1.0", default-features = false, optional = true }
serde_derive          = { version = "1.0", optional = true }
aligned               = { version = "0.3.1", optional = true }
framed                = { git = "https://github.com/fluffysquirrels/framed-rs", default-features = false, optional = true }
itm_logger            = { git = "https://github.com/cs2dsb/itm_logger.rs", default-features = false }
#itm_logger            = { path = "../../itm_logger", default-features = false }
heapless              = { version = "0.4.1", features = [ "const-fn" ], optional = true}
libm                  = "0.1.2"
ht16k33               = { version = "0.4.0", default-features = false }
adafruit-alphanum4    = "0.1.2"
max31855              = "0.1.0"

[features]
default = [ "itm" ]
itm = [
  "framed/use_nightly",
  "serde",
  "serde_derive",
  "aligned",
  "itm_logger/logging",
  "heapless",
]
dummy_zc = [] #Swaps zero crossing detection for periodic timer for testing purposes

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations